@@ -52,6 +52,8 @@ NOTE: sorry, this is very raw :)
  - precise tempo bend (not controller-like, more like a sudden change)
 // ---------------
 
+* doesnt handle when there's too many songs open for all to be visible
+
 + linux : export to wav when not using timidity?
 
  - render a bit less often + probably too many paint events (duplicate ones at times) track and remove them
@@ -84,7 +86,6 @@ NOTE: sorry, this is very raw :)
   
  - setting sharp/flat sign manually sometimes doesn't work (when it's possible to display the note on a level with no sign)
  
- - doesnt handle when there's too many songs open for all to be visible
  
  
  UNSURE:
@@ -112,7 +113,10 @@ NOTE: sorry, this is very raw :)
 * crash when cancelling printing
 * opening manual doesn't always work (?)
 
-* in guitar editor, put 2 notes on two strings. move them down until both are on lowest string. undo and try to get back those you had in the beginning
+* rearrange notes doesn't always undo correctly
+- "rearrange selected notes" doesn't always work optimally
+
+* undoing vertical modes in drum editor does not always work (black headers can change drum patterns)
 
 + when printing to tablature, and exporting to PDF, suggested name defaults to "aria maestosa"
 
@@ -125,10 +129,6 @@ NOTE: sorry, this is very raw :)
 + linux: scons install fails from SVN because docs are not found
 + linux: no need to install icns files, nor lprojs
 + unsure note length is okay with measure != 4/4. check forumlae on wikipedia : http://en.wikipedia.org/wiki/Modern_musical_symbols
-
-
-+ rearrange notes doesn't always undo correctly
-- "rearrange selected notes" doesn't always work optimally
 
 - error at startup (quicktime will not play dummy file to init it?)
         error:
