@@ -6,6 +6,7 @@ SVN
 - always play note on click
 - fixed file name being used over song name when printing tablature
 - removed harmless warning on the terminal when loading a midi file saved by aria
+- fixed undoing vertical moves in guitar editor
 
 1.1.2
 - Added german translation (thanks to Friedrich Weber!)
